# dotfiles

./: .editorconfig  .gitignore  LICENSE  README.md  install.sh
.github/: dependabot.yml
.github/workflows/: gh-pages.yml
dotfiles/: .tool-versions  .zshenv
dotfiles/.config/alacritty/: alacritty.yml
dotfiles/.config/bat/: config
dotfiles/.config/dash/: library.dash
dotfiles/.config/dash/Dash.dashsync/: Preferences.plist
dotfiles/.config/direnv/: direnvrc
dotfiles/.config/espanso/: default.yml
dotfiles/.config/fsh/: solarized-dark.ini
dotfiles/.config/git/: config  ignore
dotfiles/.config/git/templates/: gitmessage.txt
dotfiles/.config/git/templates/hooks/: pre-commit  pre-push
dotfiles/.config/gitleaks/: gitleaks.toml
dotfiles/.config/homebrew/: Brewfile
dotfiles/.config/karabiner/: karabiner.json
dotfiles/.config/npm/: npmrc
dotfiles/.config/nvim/: coc-settings.json  init.vim
dotfiles/.config/nvim/plugin/dein/: dein.vim
dotfiles/.config/nvim/python/: pyproject.toml
dotfiles/.config/pip/: packages.txt  requirements.txt
dotfiles/.config/pypoetry/: config.toml
dotfiles/.config/raycast/: config.rayconfig  get-local-ip-v4.sh  get-local-ip-v6.sh  reload-coreaudio.sh  youtube.sh
dotfiles/.config/raycast/scripts/search/: search-in-dash.sh  whois.sh
dotfiles/.config/tmux/: tmux.conf
dotfiles/.config/vim/template/bash/: base-main.bash
dotfiles/.config/zsh/: .zshenv  .zshrc  .zshrc_lazy
dotfiles/.gnupg/: gpg-agent.conf
dotfiles/.local/share/nvim/python/: pyproject.toml
dotfiles/.ssh/: config
src/: install.sh  link.sh
(+11 files in other folders)
