[tool.poetry]
name = "znppunfuv-dotfiles"
version = "1.0.0"
description = "znppunfuv dotfiles"
authors = ["znppunfuv <znppunfuv@protonmail.com>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.8"
pynvim = "^0.4.2"
neovim-remote = "^2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
